--- a/classes/index.html
+++ b/classes/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>this is a h1</h1>
+    <!-- <h1>this is a h1</h1> -->
     <h2>this is a h2</h2>
     <h3>this is a h3</h3>
     <h4>this is a h4</h4>
