Adding six new tag

--- a/classes/index.html
+++ b/classes/index.html
@@ -13,5 +13,23 @@
     <h5>this is a h5</h5>
     <h6>this is a h6</h6>
     <p>this is a new para</p>
+    <br>*******************<br>  <!--add first tag-->
+    <ul>unordered list :  <!-- add second tag-->
+    <li>apple</li>
+    <li>bannana</li>
+    <li>orange</li>
+    </ul>
+    <ol>ordered list :   <!-- add third tag-->
+        <li>apple</li>
+        <li>bannana</li>
+        <li>orange</li> 
+    </ol>
+    <table border="2">  <!-- add fourth tag-->
+        <tr><td>mohammad</td><td>Othman</td></tr>
+        <tr><td>Ahmad</td><td>Mustafa</td></tr>
+        <tr><td>Oday</td><td>Hamza</td></tr>
+    </table>
+    <hr>
+    <a href="https://www.just.edu.jo/Pages/Default.aspx">JUST</a> <!-- add fifth tag-->
 </body>
 </html>
