add css with html

--- a/classes/index.html
+++ b/classes/index.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+   
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-    <!-- <h1>this is a h1</h1> -->
-    <h2>this is a h2</h2>
+     <h1 id="moh">this is a h1</h1>
+     <h1>this is a h1</h1>
+     <h1>this is a h1</h1>
+     <h1>this is a h1</h1> 
+    <h2 >this is a h2</h2>
     <h3>this is a h3</h3>
     <h4>this is a h4</h4>
     <h5>this is a h5</h5>
     <h6>this is a h6</h6>
+    <p class="hal">this is a new para</p>
     <p>this is a new para</p>
+    <p class="hal">this is a new para</p>
+    <p>this is a new para</p>
+    <p class="hal">this is a new para</p>
     <br>*******************<br>  <!--add first tag-->
     <ul>unordered list :  <!-- add second tag-->
     <li>apple</li>
@@ -29,7 +38,7 @@
         <tr><td>Ahmad</td><td>Mustafa</td></tr>
         <tr><td>Oday</td><td>Hamza</td></tr>
     </table>
-    <hr>
+    <hr><!-- add sixth tag-->
     <a href="https://www.just.edu.jo/Pages/Default.aspx">JUST</a> <!-- add fifth tag-->
 </body>
 </html>
